fix switch and table spacing in dataRepresentation component

--- a/components/dataRepresentation/index.less
+++ b/components/dataRepresentation/index.less
@@ -5,9 +5,9 @@
 
     table.dataRepresentationDataSet {
         width: 100%;
-
         border-top: 1px solid @borderColor;
         background-color: @dataRead;
+
         &.unread {
             background-color: @dataUnread;
         }
@@ -15,6 +15,7 @@
         &:last-of-type
         {
             border-bottom: 1px solid @borderColor;
+            margin-bottom: @footer-height + 60;
         }
 
         th, td
@@ -60,10 +61,11 @@
                 }
             }
         }
+    }
 
-        .tip {
-            vertical-align: middle;
-        }
+    > #switch {
+        margin: 14px 0;
+        padding: 0 14px;
     }
 
     .dataRepresentationSelectAll {
